--- a/View/index.html
+++ b/View/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <h1>Hola mundo </h1>
+    <script src="Bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
