--- a/View/index.html
+++ b/View/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="text-center">
-            <h1 class="lato-regular">Piedra de agua</h1>
+            <h1 class="lato-black">Piedra de agua</h1>
         </div>
     </header>
     <div class="container-fluid d-flex justify-content-center align-items-center vh-100">
