--- a/src/views/Login/login.html
+++ b/src/views/Login/login.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piedra de agua</title>
-    <link rel="stylesheet" href="css/Bootstrap_css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/public/css/Bootstrap_css/bootstrap.min.css">
+    <link rel="stylesheet" href="/public/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <script src="Bootstrap/js/bootstrap.min.js"></script>
+    <script src="/public/js/Bootstrap_js/bootstrap.min.js"></script>
 </body>
 
 </html>
