--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,56 +1,39 @@
 body {
-    background: linear-gradient(135deg, #f41c1c, #b06ab3);
+    display: grid;
+    place-items: center;
     height: 100vh;
-    color: white;
-    overflow: hidden;
+    margin: 0;
+    background-color: #f8f9fa;
+}
+
+.container-login {
+    display: grid;
+    gap: 1rem;
+    width: 100%;
+    max-width: 400px;
+}
+
+.header-text {
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+    color: #343a40;
 }
 
 .login-container {
-    background-color: transparent;
-    border-radius: 15px;
-    padding: 40px;
-    border: 2px solid white;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-}
-
-.title {
-    color: #000000;
-    font-size: 1.8rem;
-    margin-bottom: 10px;
-}
-
-.login-container h3 {
-    color: #333;
-    margin-bottom: 20px;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
 }
 
 .btn-login {
-    background-color: #ffcc00;
+    background-color: #007bff;
     color: #fff;
-    border: none;
 }
 
 .btn-login:hover {
-    background-color:#f70000;
-}
-
-.form-control {
-    border-radius: 10px;
-}
-
-.form-label {
-    color: #ffffff;
-}
-
-.background-illustration {
-    border-top-right-radius: 200px;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 200px;
-    border-bottom-right-radius: 50px;
-    background: url('View/img/img.png') center center / cover no-repeat; 
-    width: 100%;
-    height: 100%;
-    background-size: contain;
+    background-color: #0056b3;
 }
 
 
