--- a/public/css/StyleLoginView.css
+++ b/public/css/StyleLoginView.css
@@ -3,7 +3,7 @@ body {
     place-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f8f9fa;
+    background: linear-gradient(135deg, #a8edea, #fed6e3);
 }
 
 .container-login {
