--- a/public/css/StyleDashBoardView.css
+++ b/public/css/StyleDashBoardView.css
@@ -171,3 +171,9 @@ button:hover {
     font-size: 16px;
     margin: 5px;
 }
+
+.table td:last-child {
+    text-align: center;
+    font-weight: bold;
+    color: #2c3e50; /* Color específico */
+}
