Cambios antes de migrar todo
Migrar todo el middelware a laravel

--- a/public/css/StyleModal.css
+++ b/public/css/StyleModal.css
@@ -90,3 +90,7 @@ button[type="submit"] {
     background-color: #4CAF50;
     color: white;
 }
+
+.modal-backdrop {
+    filter: none !important; /* Eliminar el blur */
+}
